--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   google_fonts: ^6.1.0
   flutter:
     sdk: flutter
+  animate_do: ^3.1.2
 
 
   # The following adds the Cupertino Icons font to your application.
