--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,8 @@ dependencies:
   flutter:
     sdk: flutter
   animate_do: ^3.1.2
+  google_maps_flutter: ^2.5.0
+  webview_flutter: ^2.0.0
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -63,7 +65,6 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/
-    - assets/images
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
